<resources>
    <string name="app_name">GrinGram</string>
    <string name="sign_in">SIGN IN</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="don_t_have_account_sign_up_here">Don\'t you have an account? Sign up here</string>
    <string name="sign_up">SIGN UP</string>
    <string name="username">Username</string>
    <string name="already_have_an_account_sign_in_here">Already have an account? Sign in here</string>
    <string name="image">image</string>
    <string name="contacts">Contacts</string>
    <string name="settings">Settings</string>
    <string name="chats">Chats</string>
    <string name="email_or_password_is_incorrect">Email or password is incorrect</string>
    <string name="sign_out">Sign Out</string>
    <string name="change_photo">Change photo</string>
    <string name="icon">icon</string>
    <string name="search">Search</string>
    <string name="add_contact">Add contact</string>
    <string name="remove_contact">Remove contact</string>
    <string name="user_details">User details</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="messages">Messages</string>
    <string name="checkmark">checkmark</string>
    <string name="fab">FAB</string>
    <string name="delete">Delete</string>
    <string name="copy">Copy</string>
    <string name="delete_message">Delete message</string>
    <string name="are_you_sure_you_want_to_delete_this_message">Are you sure you want to delete this message?</string>
    <string name="edit">Edit</string>
    <string name="online">online</string>
    <string name="search_chats">Search chats</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="set_new_photo">Set new photo</string>
    <string name="a_user_with_such_a_username_already_exists">A user with such a username already exists</string>
    <string name="username_cannot_be_empty">Username cannot be empty</string>
    <string name="gallery">Gallery</string>
    <string name="send_image">Send image</string>
    <string name="photo_transition">photoTransition</string>
    <string name="new_message">New Message</string>
    <string name="notification_channel_id">message_notification</string>
    <string name="server_key">server_key</string>
    <string name="chats_and_contacts">Chats and contacts</string>
    <string name="search_chats_edit_text_transition">search_chats_edit_text_transition</string>
    <string name="search_chats_app_bar_layout_transition">search_chats_app_bar_layout_transition</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="delete_dialog">Delete dialog</string>
    <string name="are_you_sure_you_want_to_delete_this_dialog">Are you sure you want to delete this dialog</string>
    <string name="sound_off">sound_off</string>
    <string name="attach">attach</string>
    <string name="save_image">Save image</string>
    <string name="media">Media</string>
    <string name="back">Back</string>
</resources>