<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.SignInFragment">

    <TextView
        android:id="@+id/text_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4.PrimaryColor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_in"
        tools:text="123" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@id/edittext_email"
        app:layout_constraintStart_toStartOf="@id/edittext_email"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

    <TextView
        android:id="@+id/text_incorrect_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="@string/email_or_password_is_incorrect"
        android:textColor="@android:color/holo_red_dark"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@id/edittext_password"
        app:layout_constraintTop_toBottomOf="@id/edittext_password"
        tools:visibility="visible" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_in"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/sign_in"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/edittext_password"
        app:layout_constraintStart_toStartOf="@id/edittext_password"
        app:layout_constraintTop_toBottomOf="@id/text_incorrect_input" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_sign_in_to_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/don_t_have_account_sign_up_here"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
        app:layout_constraintEnd_toEndOf="@id/button_sign_in"
        app:layout_constraintStart_toStartOf="@id/button_sign_in"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_in" />

</androidx.constraintlayout.widget.ConstraintLayout>