<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".ui.SignUpFragment">

    <TextView
        android:id="@+id/text_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:inputType="text"
        android:maxLines="1"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_sign_up" />

    <EditText
        android:id="@+id/edittext_email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="emailAddress"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@id/edittext_username"
        app:layout_constraintStart_toStartOf="@id/edittext_username"
        app:layout_constraintTop_toBottomOf="@+id/edittext_username" />

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingHorizontal="20dp"
        app:layout_constraintEnd_toEndOf="@id/edittext_email"
        app:layout_constraintStart_toStartOf="@id/edittext_email"
        app:layout_constraintTop_toBottomOf="@+id/edittext_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_sign_up"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/sign_up"
        android:textSize="16sp"
        app:cornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="@id/edittext_password"
        app:layout_constraintStart_toStartOf="@id/edittext_password"
        app:layout_constraintTop_toBottomOf="@id/edittext_password" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_sign_up_to_sign_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/already_have_an_account_sign_in_here"
        app:layout_constraintEnd_toEndOf="@id/button_sign_up"
        app:layout_constraintStart_toStartOf="@id/button_sign_up"
        app:layout_constraintTop_toBottomOf="@+id/button_sign_up" />

</androidx.constraintlayout.widget.ConstraintLayout>