<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.EditProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:contentInsetStart="0dp">

            <TextView
                android:id="@+id/edit_profile_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:paddingHorizontal="10dp"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline7.SansSerif.RedColor" />

            <TextView
                android:id="@+id/edit_profile_done_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:paddingHorizontal="10dp"
                android:text="@string/done"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline7.PrimaryColor" />

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/edit_profile_user_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/circle_imageview"
            android:src="@drawable/baseline_person_24"
            app:civ_border_width="1dp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            android:id="@+id/edit_profile_set_new_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/set_new_photo"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline7.SansSerif.PrimaryColor" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <EditText
            android:id="@+id/edit_profile_username_edit_text"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="30dp"
            android:autofillHints="username"
            android:hint="@string/username"
            android:inputType="text"
            android:paddingHorizontal="20dp" />

        <TextView
            android:id="@+id/edit_profile_username_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a_user_with_such_a_username_already_exists"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption.RedColor"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>