<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contact_list_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorSurface">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/contact_list_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/contacts"
            app:titleCentered="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/search_view_edit_text"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:autofillHints="username"
                android:drawableStart="@drawable/baseline_search_24"
                android:drawablePadding="10dp"
                android:hint="@string/search"
                android:inputType="text"
                android:maxLines="1"
                android:paddingHorizontal="10dp" />

            <TextView
                android:id="@+id/contact_list_search_cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/cancel"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline7.SansSerif.RedColor"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contact_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>