<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_rounded_background"
        android:backgroundTint="@color/colorSurface"
        app:elevation="0dp">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:contentInsetStart="0dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/new_message_bottom_sheet_cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingHorizontal="10dp"
                    android:text="@string/cancel"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline7.RedColor" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:text="@string/new_message"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
            </RelativeLayout>

        </com.google.android.material.appbar.MaterialToolbar>

        <EditText
            android:id="@+id/new_message_bottom_sheet_search_edit_text"
            android:layout_width="match_parent"
            style="@style/EditTextStyle"
            android:layout_height="48dp"
            android:layout_margin="10dp"
            android:autofillHints="username"
            android:drawableStart="@drawable/baseline_search_24"
            android:drawablePadding="10dp"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:paddingHorizontal="10dp" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/new_message_bottom_sheet_contact_list_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>