<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ChatDetailsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:backgroundTint="?android:attr/colorBackground">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/chat_details_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:collapsedTitleGravity="center"
            app:contentScrim="@color/colorSurface"
            app:expandedTitleGravity="center_horizontal|bottom"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
            tools:title="Username">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/chat_details_user_image"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/circle_imageview"
                android:src="@drawable/baseline_person_24"
                app:civ_border_width="1dp" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/chat_details_user_online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginBottom="8dp"
                tools:text="last seen recently" />

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/chat_details_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/MaterialToolbarStyle"
                app:layout_collapseMode="pin"
                app:navigationIcon="@drawable/baseline_arrow_back_24"
                app:titleCentered="true" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/chat_details_mute_unmute_button"
                    style="@style/ButtonStyle.ChatDetailsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/mute"
                    app:icon="@drawable/baseline_notifications_24" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/chat_details_add_remove_contact_button"
                    style="@style/ButtonStyle.ChatDetailsButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:contentDescription="@string/add_contact"
                    android:ellipsize="end"
                    android:foreground="?attr/selectableItemBackground"
                    android:maxLines="1"
                    android:text="@string/add_contact"
                    app:icon="@drawable/baseline_person_add_24" />

                <Space
                    android:layout_width="10dp"
                    android:layout_height="match_parent" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/chat_details_delete_dialog_button"
                    style="@style/ButtonStyle.ChatDetailsButton.RedContent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/delete"
                    app:icon="@drawable/baseline_delete_24" />


            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorSurface"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/media"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline7.SansSerif" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/chat_details_media_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                tools:listitem="@layout/gallery_item"
                tools:spanCount="3" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>